fix: menu/modal, resources visibility and favicon

--- a/themes/hugo-hero-theme/assets/scss/components/_header.scss
+++ b/themes/hugo-hero-theme/assets/scss/components/_header.scss
@@ -16,6 +16,9 @@
     z-index: 100;
     width: 100%;
   }
+  &.header-to-fixed{
+    position: fixed !important;
+  }
 }
 // .lock-scroll {
 //   .header {
